--- a/HomePage2.html
+++ b/HomePage2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>teens2teens</title>
-  <link rel="stylesheet" href="C:\Users\student\Documents\MyNewProject(IFE24)\Experimenting\static\styles\HomePage2.css">
+  <link rel="stylesheet" href="\HomePage2.css">
 </head>
 <body>
   <div id="image">
