--- a/HomePage1.html
+++ b/HomePage1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>teens2teens</title>
-  <link rel="stylesheet" href="\HomePage1.css"/>
+  <link rel="stylesheet" href="/HomePage1.css"/>
 </head>
 <body>
   <div id="image">
